@@ -186,6 +186,9 @@
 /* Define to 1 if you have the `strtol' function. */
 #undef HAVE_STRTOL
 
+/* Define to 1 if you have the <StructTreeRoot.h> header file. */
+#undef HAVE_STRUCTTREEROOT_H
+
 /* Define to 1 if `st_mtim' is a member of `struct stat'. */
 #undef HAVE_STRUCT_STAT_ST_MTIM
 
