@@ -575,10 +575,10 @@ static int m_Catalog_getPageRef(lua_State * L)
 
 m_poppler_get_GOOSTRING(Catalog, getBaseURI);
 m_poppler_get_GOOSTRING(Catalog, readMetadata);
-#ifdef GETSTRUCTTREEROOT_RETURNS_OBJECT
-m_poppler_get_poppler(Catalog, Object, getStructTreeRoot);
-#else
+#ifdef HAVE_STRUCTTREEROOT_H
 m_poppler_get_poppler(Catalog, StructTreeRoot, getStructTreeRoot);
+#else
+m_poppler_get_poppler(Catalog, Object, getStructTreeRoot);
 #endif
 
 static int m_Catalog_findPage(lua_State * L)
@@ -2152,10 +2152,10 @@ static int m_PDFDoc_readMetadata(lua_State * L)
 
 static int m_PDFDoc_getStructTreeRoot(lua_State * L)
 {
-#ifdef GETSTRUCTTREEROOT_RETURNS_OBJECT
-    Object *obj;
-#else
+#ifdef HAVE_STRUCTTREEROOT_H
     StructTreeRoot *obj;
+#else
+    Object *obj;
 #endif
     udstruct *uin, *uout;
     uin = (udstruct *) luaL_checkudata(L, 1, M_PDFDoc);
@@ -2163,10 +2163,10 @@ static int m_PDFDoc_getStructTreeRoot(lua_State * L)
         pdfdoc_changed_error(L);
     if (((PdfDocument *) uin->d)->doc->getCatalog()->isOk()) {
         obj = ((PdfDocument *) uin->d)->doc->getStructTreeRoot();
-#ifdef GETSTRUCTTREEROOT_RETURNS_OBJECT
-        uout = new_Object_userdata(L);
-#else
+#ifdef HAVE_STRUCTTREEROOT_H
         uout = new_StructTreeRoot_userdata(L);
+#else
+        uout = new_Object_userdata(L);
 #endif
         uout->d = obj;
         uout->pc = uin->pc;
